--- a/index.html
+++ b/index.html
@@ -8,23 +8,91 @@
 </head>
 
 <body>
+	<header>
+		<div><h1>Styles Conference</h1></div>
+		<div class="nav-area">
+			<h4>November 24-26th -Lagos,Nig.</h4>
+			<nav>
+				<a href="/index.html">HOME</a>
+				<a href="/speakers.html">SPEAKERS</a>
+				<a href="/schedule.html">SCHEDULE</a>
+				<a href="/venue.html">VENUE</a>
+				<a href="/register.html">REGISTER</a>
+			</nav>
+		</div>
+	</header>
 	<section class="welcome">
-		<header>
-			<div><h1>Styles Conference</h1></div>
-			<div class="nav-area">
-				<h4>November 24-26th -Lagos,Nig.</h4>
-				<nav>
-					<a href="/index.html">HOME</a>
-					<a href="/speakers.html">SPEAKERS</a>
-					<a href="/schedule.html">SCHEDULE</a>
-					<a href="/venue.html">VENUE</a>
-					<a href="/register.html">REGISTER</a>
-				</nav>
+		<div>
+			<h2>Dedicated to the Craft of Building Websites</h2>
+			<p>Every year the brightest web designers and front-end developers descend on <br>
+			   Chicago to discuss the latest technologies. Join us this August!
+			</p>
+		</div>
+		<div>
+			<a href="/register.html"><button>REGISTER NOW</button></a>
+		</div>
+	</section>
+	<section class="content">
+
+		<div class="card">
+			<div><h4>SPEAKERS</h4></div>
+			<div class="img">
+				<img src="" alt="speaker image">
 			</div>
-		</header>
+			<div class="card-desc">
+				<a href="speakers.html">World-Class Speakers</a>
+				<p>
+					Joining us from all around the world are<br>
+					 over twenty fantastic speakers, here to<br>
+					  share their stories.
+				</p>
+			</div>
+		</div>
+
+		<div class="card">
+			<div><h4>SCHEDULE</h4></div>
+			<div class="img">
+				<img src="" alt="speaker image">
+			</div>
+			<div class="card-desc">
+				<a href="schedule.html">Three Inspiring Days</a>
+				<p>
+					Enjoy three inspiring and action-packed<br>
+					days of talks, gatherings, and all-around<br>
+					good times.
+				</p>
+			</div>
+		</div>
+
+		<div class="card">
+			<div><h4>VENUE</h4></div>
+			<div class="img">
+				<img src="" alt="speaker image">
+			</div>
+			<div class="card-desc">
+				<a href="venue.html">Eko Hotel & Suites </a>
+				<p>
+					Within the heart of Lagos metropolis,<br>
+					Eko Hotel & Suites will provide a<br>
+				    beautiful conference venue.
+				</p>
+			</div>
+		</div>
+
 	</section>
 
-	<p>Every year the brightest web designers and front-end develeopers descend on chicago to discuss the latest technologies.Join us this August!</p>
+	<footer>
+		<div>&copy; Styles Conference</div>
+
+		<nav>
+			<a href="/index.html">HOME</a>
+			<a href="/speakers.html">SPEAKERS</a>
+			<a href="/schedule.html">SCHEDULE</a>
+			<a href="/venue.html">VENUE</a>
+			<a href="/register.html">REGISTER</a>
+		</nav>
+		
+	</footer>
 </body>
 
 </html>
