--- a/register.html
+++ b/register.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet/css" href="styles.css" />
 </head>
 <body>
+    <header>
+		<div><h1>Styles Conference</h1></div>
+		<div class="nav-area">
+			<h4>November 24-26th -Lagos,Nig.</h4>
+			<nav>
+				<a href="/index.html">HOME</a>
+				<a href="/speakers.html">SPEAKERS</a>
+				<a href="/schedule.html">SCHEDULE</a>
+				<a href="/venue.html">VENUE</a>
+				<a href="/register.html">REGISTER</a>
+			</nav>
+		</div>
+	</header>
+	<section class="welcome">
+		<div>
+			<h2>Dedicated to the Craft of Building Websites</h2>
+			<p>Every year the brightest web designers and front-end developers descend on <br>
+			   Chicago to discuss the latest technologies. Join us this August!
+			</p>
+		</div>
+		<div>
+			<a href="/register.html"><button>REGISTER NOW</button></a>
+		</div>
+    </section>
     
+    <footer>
+		<div>&copy; Styles Conference</div>
+
+		<nav>
+			<a href="/index.html">HOME</a>
+			<a href="/speakers.html">SPEAKERS</a>
+			<a href="/schedule.html">SCHEDULE</a>
+			<a href="/venue.html">VENUE</a>
+			<a href="/register.html">REGISTER</a>
+		</nav>
+		
+	</footer>
 </body>
 </html>
