add schedule page tagline and venue page tagline & map

--- a/schedule.html
+++ b/schedule.html
@@ -20,16 +20,15 @@
 			</nav>
 		</div>
 	</header>
-	<section class="welcome">
+	<section class="tag-line">
 		<div>
-			<h2>Dedicated to the Craft of Building Websites</h2>
-			<p>Every year the brightest web designers and front-end developers descend on <br>
-			   Chicago to discuss the latest technologies. Join us this August!
+			<h2>Schedule</h2>
+			<p>
+                The conference opens with amazing workshops and continues with two days of incredible talks and<br>
+                 keynotes, all of which are facilitated by industry-leading experts.
 			</p>
 		</div>
-		<div>
-			<a href="/register.html"><button>REGISTER NOW</button></a>
-		</div>
+		
     </section>
     
     <footer>
