--- a/venue.html
+++ b/venue.html
@@ -20,16 +20,30 @@
 			</nav>
 		</div>
 	</header>
-	<section class="welcome">
+	<section class="tag-line">
 		<div>
-			<h2>Dedicated to the Craft of Building Websites</h2>
-			<p>Every year the brightest web designers and front-end developers descend on <br>
-			   Chicago to discuss the latest technologies. Join us this August!
+			<h2>Venue</h2>
+            <p>The conference is held at The Eko Hotel and Suites, a beautiful  landmark. The conference hotel,<br>
+                 Eko Hotel, is a short drive away down State Street.
 			</p>
 		</div>
-		<div>
-			<a href="/register.html"><button>REGISTER NOW</button></a>
-		</div>
+		
+    </section>
+
+    <section>
+        <div class="map-desc">
+            <h3>Eko Hotel</h3>
+            <p>1415 Adetokunbo Ademola Street,<br>
+                 Victoria Island, Lagos</p>
+            <a href="https://www.ekohotels.com/">ekohotels.com</a>
+        </div>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.745261406699!2d3.42795024926821!3d6.426765126043126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf53aec4dd92d%3A0x5e34fe6a84cddd53!2sEko%20Hotels%20%26%20Suites!5e0!3m2!1sen!2sng!4v1604627521260!5m2!1sen!2sng"
+             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+            </iframe>
+        </div>
+
+
     </section>
     
     <footer>
