table data added

--- a/schedule.html
+++ b/schedule.html
@@ -25,12 +25,138 @@
 			<h2>Schedule</h2>
 			<p>
                 The conference opens with amazing workshops and continues with two days of incredible talks and<br>
-                 keynotes, all of which are facilitated by industry-leading experts.
+                  keynotes, all of which are facilitated by industry-leading experts.
 			</p>
 		</div>
 		
     </section>
-    
+		<table>
+			<tr>
+				<th>Workshops</th>
+				<td>November 24th</td>
+			</tr>
+			<tr>
+				<td>8:30 AM</td>
+				<td>Registeration</td>
+			</tr>
+			<tr>
+				<td>9:00 AM</td>
+				<td>Adam Connor
+					Lights! Camera! Interaction! Design Inspiration from Filmmakers
+				</td>
+				<td>Jennifer Jones
+					What Designers Can Learn from Parenting
+				</td>
+			</tr>
+			<tr>
+				<td>12:30 PM</td>
+				<td>Lunch</td>
+			</tr>
+			<tr>
+				<td>2:00 PM</td>
+				<td>Tessa Harmon
+					Crafty Coding: Generating Knitting Patterns
+				</td>
+				<td>Russ Unger
+					From Muppets to Mastery: Core UX Principles from Mr. Jim Henson
+				</td>
+			</tr>
+		</table>
+
+		<table>
+			<tr>
+				<th>Conference</th>
+				<td>November 25th</td>
+			</tr>
+			<tr>
+				<td>8:30 AM</td>
+				<td>Registration</td>
+			</tr>
+			<tr>
+				<td>9:00 AM</td>
+				<td>	
+					Vitaly Friedman
+					Responsive Web Design: Clever Tips and Techniques
+				</td>
+			</tr>
+			<tr>
+				<td>10:00 AM</td>
+				<td>Morning Break</td>
+			</tr>
+			<tr>
+				<td>10:30 AM</td>
+				<td>Shay Howe
+					Less is More: How Constraints Cultivate Growth
+				</td>
+				<td>Jenn Downs
+					What’s Stopping You?
+				</td>
+			</tr>
+			<tr>
+				<td>12:30 PM</td>
+				<td>Lunch</td>
+			</tr>
+			<tr>
+				<td>2:00 PM</td>
+				<td>Zoe Mickley Gillenwater
+					Leveling Up with Flexbox
+				</td>
+				<td>Darby Frey
+					Building a Mobile Layout
+				</td>
+			</tr>
+		</table>
+
+		<table>
+			<tr>
+				<th>Conference</th>
+				<td>November 26th</td>
+			</tr>
+			<tr>
+				<td>8:30 AM</td>
+				<td>Registeration</td>
+			</tr>
+			<tr>
+				<td>9:00 AM</td>
+				<td>Aaron Irizarry
+					Designing a Culture of Design
+				</td>
+			</tr>
+			<tr>
+				<td>10:00 AM</td>
+				<td>Morning Break</td>
+			</tr>
+			<tr>
+				<td>10:30 AM</td>
+				<td>Jen Myers
+					Teaching Our CSS to Play Nice
+				</td>
+				<td>AJ Self
+					(You Should Be) Testing Your JavaScript
+				</td>
+			</tr>
+			<tr>
+				<td>12:30 PM</td>
+				<td>Lunch</td>
+			</tr>
+			<tr>
+				<td>2:00 PM</td>
+				<td>Victoria Pater
+					Excellent Tacos Are Not Created in a Vacuum
+				</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>3:00 PM</td>
+				<td>	
+					Bermon Painter
+					Death to Wireframes: Long Live Rapid Prototyping
+				</td>
+				<td>Candi Lemoine
+					Making Remote Development Work
+				</td>
+			</tr>
+		</table>
     <footer>
 		<div>&copy; Styles Conference</div>
 
