--- a/register.html
+++ b/register.html
@@ -20,18 +20,60 @@
 			</nav>
 		</div>
 	</header>
-	<section class="welcome">
+	<section class="tag-line">
 		<div>
-			<h2>Dedicated to the Craft of Building Websites</h2>
-			<p>Every year the brightest web designers and front-end developers descend on <br>
-			   Chicago to discuss the latest technologies. Join us this August!
+			<h2>Register</h2>
+			<p>Every year we aim to have an unbelievable time, and this year we’d love it for you to join us.<br>
+			 Conference passes only cost $99, one of the best values you’ll find.
 			</p>
 		</div>
+	</section>
+	
+    <section class="reg-content">
 		<div>
-			<a href="/register.html"><button>REGISTER NOW</button></a>
+			<h2>Purchase a Conference Pass</h2>
+			<p>$99 PER PASS</p>
+			<p>Purchase your Styles Conference pass using the form to the right. Multiple passes may
+			 be purchased within the same order, so feel free to bring a friend or two along. Once
+			  your order is finished we’ll follow up and provide a receipt for your purchase. See you soon!
+			</p>
+			<h4>Why Attend?</h4>
+			<ul>
+				<li>Over twenty world-class speakers</li>
+				<li>One full day of workshops and two full days of presentations</li>
+				<li>Hosted at The Chicago Theatre, a historical landmark</li>
+				<li>August in Chicago is simply amazing</li>
+			</ul>
 		</div>
-    </section>
-    
+		<div>
+			<form action="/register" method="post">
+				<div>
+					<label for="name">Name</label>
+					<input type="text" name="name" placeholder="Full name" required>
+				</div>
+				<div>
+					<label for="email">Email</label>
+					<input type="email" name="email" placeholder="Email address" required>
+				</div>
+				<div>
+					<label for="passes">Number of Passes</label>
+					<select name="passes">
+						<option value="1" selected>1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+					</select>
+				</div>
+				<div>
+					<label for="comment">Comments</label>
+						<div><textarea name="comment" cols="15" rows="5">
+					</textarea></div>
+				</div>
+				<button name="purchase">PURCHASE</button>
+			</form>
+		</div>
+	</section>
     <footer>
 		<div>&copy; Styles Conference</div>
 
