--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Styles Conference</title>
-<link rel="stylesheet/css" href="styles.css" />
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 	<header>
-		<div><h1>Styles Conference</h1></div>
+		<div class="home"><a>STYLES<br> CONFERENCE</a></div>
 		<div class="nav-area">
 			<h4>November 24-26th -Lagos,Nig.</h4>
 			<nav>
@@ -82,16 +83,16 @@
 	</section>
 
 	<footer>
-		<div>&copy; Styles Conference</div>
-
-		<nav>
-			<a href="/index.html">HOME</a>
-			<a href="/speakers.html">SPEAKERS</a>
-			<a href="/schedule.html">SCHEDULE</a>
-			<a href="/venue.html">VENUE</a>
-			<a href="/register.html">REGISTER</a>
-		</nav>
-		
+		<div><p>&copy; Styles Conference</p></div>
+		<div>
+			<nav>
+				<a href="/index.html">Home</a>
+				<a href="/speakers.html">Speakers</a>
+				<a href="/schedule.html">Schedule</a>
+				<a href="/venue.html">Venue</a>
+				<a href="/register.html">Register</a>
+			</nav>
+		</div>
 	</footer>
 </body>
 
