--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 	<header>
+		<div class="header-flex">
 		<div class="home"><a>STYLES<br> CONFERENCE</a></div>
 		<div class="nav-area">
 			<h4>November 24-26th -Lagos,Nig.</h4>
@@ -21,6 +22,7 @@
 				<a href="/register.html">REGISTER</a>
 			</nav>
 		</div>
+	</div>
 	</header>
 	<section class="welcome">
 		<div>
@@ -29,8 +31,8 @@
 			   Chicago to discuss the latest technologies. Join us this August!
 			</p>
 		</div>
-		<div>
-			<a href="/register.html"><button>REGISTER NOW</button></a>
+		<div class="btn">
+			<a href="/register.html">REGISTER NOW</a>
 		</div>
 	</section>
 	<section class="content">
@@ -38,13 +40,13 @@
 		<div class="card">
 			<div><h4>SPEAKERS</h4></div>
 			<div class="img">
-				<img src="" alt="speaker image">
+				<img src="https://images.squarespace-cdn.com/content/v1/595fbf906a49632afb7ef282/1516087197336-WGZ54CI3B78XZ1MBIR9P/ke17ZwdGBToddI8pDm48kDXrN5fQkZz7NprQTayAsNcUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2dnjRn10eoihNjtzpSM4gH9jYuaOqAd_zPnV3ACCZXEoNW07ycm2Trb21kYhaLJjddA/Amanda-Stenberg-Black-Girls-Rock-Acceptance-Speech.jpg" alt="speaker image">
 			</div>
 			<div class="card-desc">
 				<a href="speakers.html">World-Class Speakers</a>
 				<p>
-					Joining us from all around the world are<br>
-					 over twenty fantastic speakers, here to<br>
+					Joining us from all around the world are
+					 over twenty fantastic speakers, here to
 					  share their stories.
 				</p>
 			</div>
@@ -53,13 +55,14 @@
 		<div class="card">
 			<div><h4>SCHEDULE</h4></div>
 			<div class="img">
-				<img src="" alt="speaker image">
+				<img src="https://media.npr.org/assets/img/2017/09/19/ap_17261475347623_
+				wide-547c9914ef78e8830d209bd2ab65dc3a6081077e.jpg?s=1400" alt="speaker image">
 			</div>
 			<div class="card-desc">
 				<a href="schedule.html">Three Inspiring Days</a>
 				<p>
-					Enjoy three inspiring and action-packed<br>
-					days of talks, gatherings, and all-around<br>
+					Enjoy three inspiring and action-packed
+					days of talks, gatherings, and all-around
 					good times.
 				</p>
 			</div>
@@ -68,13 +71,14 @@
 		<div class="card">
 			<div><h4>VENUE</h4></div>
 			<div class="img">
-				<img src="" alt="speaker image">
+				<img src="https://images.squarespace-cdn.com/content/v1/595fbf906a49632afb7ef282/1516087197336-WGZ54CI3B78XZ1MBIR9P/ke17ZwdGBToddI8pDm48kDXrN5fQkZz7NprQTayAsNcUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2dnjRn10eoihNjtzpSM4gH9jYuaOqAd_zPnV3ACCZXEoNW07ycm2Trb21kYhaLJjddA/Amanda-Stenberg-Black-Girls-Rock-Acceptance-Speech.jpg"
+				 alt="picture of eko hotel">
 			</div>
 			<div class="card-desc">
 				<a href="venue.html">Eko Hotel & Suites </a>
 				<p>
-					Within the heart of Lagos metropolis,<br>
-					Eko Hotel & Suites will provide a<br>
+					Within the heart of Lagos metropolis,
+					Eko Hotel & Suites will provide a
 				    beautiful conference venue.
 				</p>
 			</div>
