--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+		<div class="header-flex">
 		<div class="home"><a>STYLES<br> CONFERENCE</a></div>
 		<div class="nav-area">
 			<h4>November 24-26th -Lagos,Nig.</h4>
@@ -20,6 +21,7 @@
 				<a href="/register.html">REGISTER</a>
 			</nav>
 		</div>
+		</div>div>
 	</header>
 	<section class="tag-line">
 		<div>
