--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+		<div class="header-flex">
 		<div class="home"><a>STYLES<br> CONFERENCE</a></div>
 		<div class="nav-area">
 			<h4>November 24-26th -Lagos,Nig.</h4>
@@ -19,6 +20,7 @@
 				<a href="/venue.html">VENUE</a>
 				<a href="/register.html">REGISTER</a>
 			</nav>
+		</div>
 		</div>
 	</header>
 	<section class="tag-line">
