footer style update and schedule page styling

--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
 				<a href="/register.html">REGISTER</a>
 			</nav>
 		</div>
-		</div>div>
+		</div>
 	</header>
 	<section class="tag-line">
 		<div>
@@ -78,7 +78,7 @@
 		</div>
 	</section>
     <footer>
-		<div>&copy; Styles Conference</div>
+		<div><p>&copy; Styles Conference</p></div>
 		<div>
 			<nav>
 				<a href="/index.html">Home</a>
@@ -88,7 +88,6 @@
 				<a href="/register.html">Register</a>
 			</nav>
 		</div>
-		
 	</footer>
 </body>
 </html>
