--- a/schedule.html
+++ b/schedule.html
@@ -32,18 +32,22 @@
 			</p>
 		</div>
 		
-    </section>
-		<table>
+    </section class="schedule">
+		<table class="center">
 			<tr>
-				<th>Workshops</th>
+				<th style="color: #648880;
+  font-size: 24px;
+  font-weight: 300;">Workshops</th>
 				<td>November 24th</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>8:30 AM</td>
+				<th>8:30 AM</th>
 				<td>Registeration</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>9:00 AM</td>
+				<th>9:00 AM</th>
 				<td>Adam Connor
 					Lights! Camera! Interaction! Design Inspiration from Filmmakers
 				</td>
@@ -52,11 +56,12 @@
 				</td>
 			</tr>
 			<tr>
-				<td>12:30 PM</td>
+				<th>12:30 PM</th>
 				<td>Lunch</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>2:00 PM</td>
+				<th>2:00 PM</th>
 				<td>Tessa Harmon
 					Crafty Coding: Generating Knitting Patterns
 				</td>
@@ -68,26 +73,32 @@
 
 		<table>
 			<tr>
-				<th>Conference</th>
+				<th  style="color: #648880;
+				font-size: 24px;
+				font-weight: 300;">Conference</th>
 				<td>November 25th</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>8:30 AM</td>
+				<th>8:30 AM</th>
 				<td>Registration</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>9:00 AM</td>
+				<th>9:00 AM</th>
 				<td>	
 					Vitaly Friedman
 					Responsive Web Design: Clever Tips and Techniques
 				</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>10:00 AM</td>
+				<th>10:00 AM</th>
 				<td>Morning Break</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>10:30 AM</td>
+				<th>10:30 AM</th>
 				<td>Shay Howe
 					Less is More: How Constraints Cultivate Growth
 				</td>
@@ -96,11 +107,12 @@
 				</td>
 			</tr>
 			<tr>
-				<td>12:30 PM</td>
+				<th>12:30 PM</th>
 				<td>Lunch</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>2:00 PM</td>
+				<th>2:00 PM</th>
 				<td>Zoe Mickley Gillenwater
 					Leveling Up with Flexbox
 				</td>
@@ -112,25 +124,30 @@
 
 		<table>
 			<tr>
-				<th>Conference</th>
+				<th style="color: #648880;
+				font-size: 24px;
+				font-weight: 300;">Conference</th>
 				<td>November 26th</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>8:30 AM</td>
+				<th>8:30 AM</th>
 				<td>Registeration</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>9:00 AM</td>
+				<th>9:00 AM</th>
 				<td>Aaron Irizarry
 					Designing a Culture of Design
 				</td>
 			</tr>
 			<tr>
-				<td>10:00 AM</td>
+				<th>10:00 AM</th>
 				<td>Morning Break</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>10:30 AM</td>
+				<th>10:30 AM</th>
 				<td>Jen Myers
 					Teaching Our CSS to Play Nice
 				</td>
@@ -139,18 +156,19 @@
 				</td>
 			</tr>
 			<tr>
-				<td>12:30 PM</td>
+				<th>12:30 PM</th>
 				<td>Lunch</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>2:00 PM</td>
+				<th>2:00 PM</th>
 				<td>Victoria Pater
 					Excellent Tacos Are Not Created in a Vacuum
 				</td>
 				<td></td>
 			</tr>
 			<tr>
-				<td>3:00 PM</td>
+				<th>3:00 PM</th>
 				<td>	
 					Bermon Painter
 					Death to Wireframes: Long Live Rapid Prototyping
@@ -160,19 +178,18 @@
 				</td>
 			</tr>
 		</table>
-    <footer>
-		<div>&copy; Styles Conference</div>
-		<div>
-			<nav>
-				<a href="/index.html">Home</a>
-				<a href="/speakers.html">Speakers</a>
-				<a href="/schedule.html">Schedule</a>
-				<a href="/venue.html">Venue</a>
-				<a href="/register.html">Register</a>
-			</nav>
-		</div>
-		
-    </footer>
+		<footer>
+			<div><p>&copy; Styles Conference</p></div>
+			<div>
+				<nav>
+					<a href="/index.html">Home</a>
+					<a href="/speakers.html">Speakers</a>
+					<a href="/schedule.html">Schedule</a>
+					<a href="/venue.html">Venue</a>
+					<a href="/register.html">Register</a>
+				</nav>
+			</div>
+		</footer>
     
 </body>
 </html>
