--- a/speakers.html
+++ b/speakers.html
@@ -139,8 +139,8 @@
     
 
     <footer>
-		<div>&copy; Styles Conference</div>
-        <div>
+		<div><p>&copy; Styles Conference</p></div>
+		<div>
 			<nav>
 				<a href="/index.html">Home</a>
 				<a href="/speakers.html">Speakers</a>
@@ -149,8 +149,7 @@
 				<a href="/register.html">Register</a>
 			</nav>
 		</div>
-		
-    </footer>
+	</footer>
     
 </body>
 </html>
