--- a/venue.html
+++ b/venue.html
@@ -50,7 +50,7 @@
     </section>
     
     <footer>
-		<div>&copy; Styles Conference</div>
+		<div><p>&copy; Styles Conference</p></div>
 		<div>
 			<nav>
 				<a href="/index.html">Home</a>
@@ -60,7 +60,7 @@
 				<a href="/register.html">Register</a>
 			</nav>
 		</div>
-    </footer>
+	</footer>
     
 </body>
 </html>
