register page styling

--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
 	</section>
 	
     <section class="reg-content">
-		<div>
+		<div class="text">
 			<h2>Purchase a Conference Pass</h2>
 			<p>$99 PER PASS</p>
 			<p>Purchase your Styles Conference pass using the form to the right. Multiple passes may
@@ -48,7 +48,7 @@
 				<li>August in Chicago is simply amazing</li>
 			</ul>
 		</div>
-		<div>
+		<div class="form">
 			<form action="/register" method="post">
 				<div>
 					<label for="name">Name</label>
@@ -73,7 +73,7 @@
 						<div><textarea name="comment" cols="15" rows="5">
 					</textarea></div>
 				</div>
-				<button name="purchase">PURCHASE</button>
+				<a name="purchase">PURCHASE</a>
 			</form>
 		</div>
 	</section>
